# cifar10--experiments

./: .gitignore  AUDIT_AND_FIXES.md  CIFAR10_FL_Literature_Review_v2.md  CIFAR10_FL_Web_Research_Report.md  EXPERIMENT_PLAN.md  README.md  VGG_ResNet_FL_Results_FULLY_VERIFIED.md  cifar10_accuracy_plot.py  cifar10_loss_plot.py  cifar10_results_table.py  setup_cifar10_vm.sh  setup_cifar10_vm_cpu.sh
CFL/: plot_cfl_clusters.py  plot_metrics.py  pyproject.toml
CFL/fedge/: cfl.py  client_app.py  server_app.py  task.py
Fedge-Simulation/: .gitignore  FEDGE_VERSIONS.md  README.md  orchestrator.py  pyproject.toml
Fedge-Simulation/fedge/: cluster_utils.py  dynamic_clustering.py  partitioning.py  scaffold_utils.py  server_scaffold.py  stats.py  task.py
HierFL/fedge/: flower_topo.py  orchestrator.py  plot_hierarchical_results.py  pyproject.toml
HierFL/fedge/archive/2025-09-01_22-47-28/: partitions.json
HierFL/fedge/archive/2025-09-01_22-47-28/global/round_0/: complete.signal  model.pkl
HierFL/fedge/archive/2025-09-01_22-47-28/global/round_1/: complete.signal  model.pkl
HierFL/fedge/archive/2025-09-01_22-47-28/leaf/server_0/: client_eval_metrics.csv  client_fit_metrics.csv  proxy_signals.csv  server_metrics.csv
HierFL/fedge/archive/2025-09-01_22-47-28/leaf/server_1/: client_eval_metrics.csv  client_fit_metrics.csv  proxy_signals.csv  server_metrics.csv
HierFL/fedge/archive/2025-09-01_22-47-28/leaf/server_2/: client_eval_metrics.csv  client_fit_metrics.csv  proxy_signals.csv  server_metrics.csv
HierFL/fedge/fedge/: client_app.py  cloud_flower.py  leaf_client.py  leaf_server.py  partitioning.py  proxy_client.py  server_app.py  task.py
Scaffold/: pyproject.toml
Scaffold/fedge/: client_app.py  scaffold.py  server_app.py  task.py
archived/Fedge-Static/fedge/: orchestrator.py  plot_hierarchical_results.py  pyproject.toml
archived/Fedge-Static/fedge/docs/: hfl_dynamic_clustering.md
archived/Fedge-Static/fedge/fedge/: cloud_flower.py  cluster_utils.py  leaf_client.py  leaf_server.py  partitioning.py  proxy_client.py  scaffold_utils.py  task.py
archived/Fedge-Static/fedge/fedge/utils/: metrics_storage.py
cifar10-seed/: ANALYSIS_REPORT.md  COLOR_REFERENCE.md  client_personalization_analysis.py  convert_fedge150_metrics.py  copy_fedge_simple.py  plot_results.py  seed_aggregation_analysis.py  show_results.py  test_loss_plot.py  validate_analysis.py
cifar10-seed/personalization_analysis/: PERSONALIZATION_REPORT.md
fedge/: orchestrator.py  plot_hierarchical_results.py  pyproject.toml
fedge/docs/: hfl_dynamic_clustering.md
fedge/fedge/: cloud_flower.py  cluster_utils.py  leaf_client.py  leaf_server.py  proxy_client.py  task.py
fedge150/: .gitignore  orchestrator.py  pyproject.toml
fedge150/fedge/: cloud_flower.py  leaf_client.py  leaf_server.py  proxy_client.py  task.py
fedge150/fedge/utils/: cloud_metrics.py
fedprox/: .gitignore  README.md  plot_metrics.py  pyproject.toml  summarize_across_seeds.py  test_training.py
fedprox/fedge/: client_app.py  server_app.py  task.py
fedprox/fedge/utils/: functional.py
pFedMe/: pyproject.toml
pFedMe/fedge/: client_app.py  pfedme.py  server_app.py  task.py
plots/: cifar10_results_summary_template.csv
