[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedprox"
version = "1.0.0"
description = "FedProx: Federated Optimization in Heterogeneous Networks"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.12.0,<2.0",
    "flwr-datasets[vision]>=0.3.0,<1.0",
    "torch>=2.2.1,<3.0",
    "torchvision>=0.17.1,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "fedprox"

[tool.flwr.app.components]
serverapp = "fedge.server_app:app"
clientapp = "fedge.client_app:app"

[tool.flwr.app.config]
# NIID-Bench Standard Settings + ResNet-18
# Reference: Li et al. (2022) ICDE - NIID-Bench benchmark
num-server-rounds = 200   # NIID-Bench: 200 rounds for reported accuracy
fraction-fit = 0.3        # 30% client participation
fraction-evaluate = 0.0   # Skip distributed eval (use centralized only)
min_available_clients = 10  # Match num-supernodes
# FedProx hyperparameters
proximal_mu = 0.01        # Standard FedProx mu
local-epochs = 1          # Quick test (change to 5 for NIID-Bench)
batch_size = 64           # NIID-Bench standard
learning_rate = 0.01      # NIID-Bench standard
# Data heterogeneity
dirichlet_alpha = 0.5     # NIID-Bench standard
seed = 42

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.ray_init_args.local_mode = true
options.ray_init_args.ignore_reinit_error = true
