[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfedme"
version = "1.0.0"
description = "pFedMe: Personalized Federated Learning with Moreau Envelopes"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.12.0,<2.0",
    "flwr-datasets[vision]>=0.3.0,<1.0",
    "torch>=2.2.1,<3.0",
    "torchvision>=0.17.1,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "pfedme"

[tool.flwr.app.components]
serverapp = "fedge.server_app:app"
clientapp = "fedge.client_app:app"

[tool.flwr.app.config]
dirichlet_alpha = 0.5
num-server-rounds = 150
fraction-fit = 1        
min_available_clients = 10  # Deterministic all-client rounds
# pFedMe hyperparameters (optimized for CIFAR-10)
lamda = 1.0               # Moreau envelope regularization weight (reduced for stability)
inner_steps = 20          # K: inner optimization steps for θ (increased for sufficient training)
outer_steps = 1           # R: outer optimization steps for w
inner_lr = 0.01           # Learning rate for θ optimization (reduced for stability)
outer_lr = 0.005          # Learning rate for w outer update (learning_rate)
beta = 1.0                # Server β-mixing parameter (1.0 = no mixing)
local-epochs = 1          # Number of local epochs (canonical: avoid multiplying outer steps)
batch_size = 32           # Batch size
seed = 0

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.ray_init_args.local_mode = true
options.ray_init_args.ignore_reinit_error = true

