[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedge"
version = "1.0.0"
description = ""
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.18.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "fedge"

[tool.flwr.app.components]
serverapp = "fedge.server_app:app"
clientapp = "fedge.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 1
fraction-fit = 1.0
local-steps = 60
# Baseline run configuration
seed = 2
batch_size = 32

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
client-resources.num_cpus = 1

[tool.flwr.hierarchy]
num_servers = 3
clients_per_server = [5,5,5]
global_rounds = 150
server_rounds_per_global = 1
cloud_port = 6000
alpha_server = 0.5
alpha_client = 1
